# wiktionary-part-of-speech-extract

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  sample-40000.xml  sample-page-cat.xml  sample-page-dictionary.xml  sample.xml
src/: lib.rs  main.rs  parse.rs  tags.rs
