[package]
authors = ["Cole Lawrence <cole@colelawrence.com>"]
description = "English Wiktionary parsed for part-of-speech info and placed into a precompiled FST"
edition = "2018"
include = ["src/**/*", "dist/*.fst", "Cargo.toml"]
license = "MIT OR Apache-2.0"
name = "wiktionary-part-of-speech-extract"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4.5"
once_cell = "1.7.2"
regex = "1.4.5"
unidecode = "0.3.0"
ustr = "0.7.0"

[[bin]]
bench = false
name = "regenerate"
path = "src/bin/regenerate/regenerate.rs"
required-features = ["raw-masking"]
test = false

# ...
[features]
raw-masking = []
spell-check = ["fst/levenshtein"]
