[package]
authors = ["Story.ai Team <team@story.ai>", "Cole Lawrence <cole@colelawrence.com>"]
description = "English Wiktionary parsed for part-of-speech info and placed into a precompiled FST"
edition = "2018"
include = ["src/**/*", "dist/*.fst", "Cargo.toml"]
license = "MIT OR Apache-2.0"
name = "wiktionary-part-of-speech-extract"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4.7"
once_cell = "1.7.2"
regex = {version = "1.5.4", optional = true}
unidecode = {version = "0.3.0", optional = true}
ustr = {version = "0.8.0", optional = true}

[[bin]]
bench = false
name = "regenerate"
path = "src/bin/regenerate/regenerate.rs"
required-features = ["raw-masking", "bin-regenerate"]
test = false

# ...
[features]
bin-regenerate = ["regex", "ustr", "unidecode"]
raw-masking = []
